--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "moment": "^2.27.0",
-    "uuid": "^8.2.0"
+    "moment": "^2.27.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
