--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app.js"
   },
   "author": "Mark Anthony Patrick Rodriguez",
   "license": "ISC",
@@ -13,5 +13,7 @@
     "express": "^4.16.4",
     "moment": "^2.27.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
