Fixed heroku error

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Mark Anthony Patrick Rodriguez",
   "license": "ISC",
@@ -17,3 +18,5 @@
     "nodemon": "^2.0.4"
   }
 }
+
+
